Formats html and adds footer to bottom

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <title>Startup</title>
 
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -16,7 +30,7 @@
       <div class="row">
         <header class="text-center col-12 animated slideInDown">
           <h1 class="text-uppercase">
-            <strong >The Biggest Startup Event of the Year</strong>
+            <strong>The Biggest Startup Event of the Year</strong>
           </h1>
         </header>
         <div class="buffer col-12"></div>
@@ -26,7 +40,17 @@
             <button class="btn btn-primary btn-xl">Find out more</button>
           </a>
         </section>
+        <div class="buffer2 col-12"></div>
       </div>
     </div>
+    <footer class="text-center col-12" id="question">
+      <h2 class="text-uppercase">
+        <strong><u>What Is It?</u></strong>
+      </h2>
+      <p>
+        Well it's the biggest startup of course. Get ready to be amazed and the
+        product that is starting!
+      </p>
+    </footer>
   </body>
 </html>
